remove user_name and adding area_of_specialization

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
 
 <head>
-  <title>just-like-server</title>
+  <title>just like server</title>
 </head>
 
 <body>
-  <h1>just like server</h1>
-  <p>Welcome to server</p>
+  <h1>Welcome to #just_like server</h1>
 </body>
 
 </html>
